fixed referral spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -107,9 +107,9 @@ body {
     }
   }
   div.referral {
-    min-height: 400px;
+    min-height: 300px;
     transition: 0.5s;
-    padding: 3.25em;
+    padding: 1em 2em 0 2em;
     background-color: none;
     font-weight: 300;
     p {
@@ -204,7 +204,7 @@ body {
   p {
     font-size: 1.5em;
     line-height: 1.5em;
-    padding: 0 3em;
+    padding: 0 0.5em;
   }
 }
 
